falling back to LRU caching in JDK 16 if the CHM.table field can't be opened. Fixes #1462 (again)